# tesco

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_requirements.txt  tox.ini
tesco/: __init__.py  main.py
tesco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_import.py  test_tesco.py
