[tool.poetry]
name = "tesco"
version = "0.6.0"
description = ""
authors = ["Miles Budden <miles@budden.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pbexe/tesco"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
